--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,12 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
 			rel="stylesheet"
 		/>
-
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<script
 			src="https://kit.fontawesome.com/26882c6cd7.js"
