--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
 			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 			crossorigin="anonymous"
 		/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<script
 			src="https://kit.fontawesome.com/26882c6cd7.js"
